# glmocr-rs

./: .gitignore  Cargo.toml  README.md  benchmark.bat  build.rs
.cargo/: config.toml
src/: lib.rs  main.rs
src/backend/: aha_backend.rs  gguf_backend.rs  llama_cpp_loader.rs  llama_cpp_sys.rs  mod.rs  native_backend.rs  ort_backend.rs
