[package]
name = "glm_ocr_onnx_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
image = { version = "0.25", default-features = true, features = ["jpeg", "png"] }
ndarray = "0.17"
ort = { version = "2.0.0-rc.9", features = ["ndarray", "download-binaries", "cuda"] }
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }
candle-core = "0.10.2"
candle-nn = "0.10.2"
candle-transformers = "0.10.2"
safetensors = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
