[package]
name = "glmocr_rs"
version = "0.1.0"
edition = "2021"
description = "GLM-OCR Rust inference library with ONNX, Candle, and llama.cpp GGUF backends"
license = "MIT"
repository = "https://github.com/caojiachen1/glmocr_rs"
keywords = ["ocr", "glm", "llama", "onnx", "multimodal"]
categories = ["multimedia::images", "science"]

[lib]
name = "glmocr_rs"
path = "src/lib.rs"

[[bin]]
name = "glmocr_rs"
path = "src/main.rs"

[dependencies]
anyhow = "1"
image = { version = "0.25", default-features = true, features = ["jpeg", "png"] }
ndarray = "0.17"
ort = { version = "2.0.0-rc.12", features = ["ndarray", "download-binaries", "cuda"] }
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }
candle-core = { git = "https://github.com/huggingface/candle.git"}
candle-nn = { git = "https://github.com/huggingface/candle.git"}
candle-transformers = { git = "https://github.com/huggingface/candle.git"}
safetensors = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"

[features]
default = ["cuda", "gguf"]
cuda = ["candle-core/cuda", "candle-nn/cuda"]
gguf = []

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
